; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/capi/extr_kcapi_proc.c_contrstats_show.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/capi/extr_kcapi_proc.c_contrstats_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.seq_file = type { i32 }
%struct.capi_ctr = type { i32, i32, i32, i32, i32 }

@.str = private unnamed_addr constant [20 x i8] c"%d %lu %lu %lu %lu\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.seq_file*, i8*)* @contrstats_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @contrstats_show(%struct.seq_file* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.seq_file*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.capi_ctr*, align 8
  store %struct.seq_file* %0, %struct.seq_file** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = bitcast i8* %7 to %struct.capi_ctr**
  %9 = load %struct.capi_ctr*, %struct.capi_ctr** %8, align 8
  store %struct.capi_ctr* %9, %struct.capi_ctr** %6, align 8
  %10 = load %struct.capi_ctr*, %struct.capi_ctr** %6, align 8
  %11 = icmp ne %struct.capi_ctr* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %31

13:                                               ; preds = %2
  %14 = load %struct.seq_file*, %struct.seq_file** %4, align 8
  %15 = load %struct.capi_ctr*, %struct.capi_ctr** %6, align 8
  %16 = getelementptr inbounds %struct.capi_ctr, %struct.capi_ctr* %15, i32 0, i32 4
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.capi_ctr*, %struct.capi_ctr** %6, align 8
  %19 = getelementptr inbounds %struct.capi_ctr, %struct.capi_ctr* %18, i32 0, i32 3
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.capi_ctr*, %struct.capi_ctr** %6, align 8
  %22 = getelementptr inbounds %struct.capi_ctr, %struct.capi_ctr* %21, i32 0, i32 2
  %23 = load i32, i32* %22, align 4
  %24 = load %struct.capi_ctr*, %struct.capi_ctr** %6, align 8
  %25 = getelementptr inbounds %struct.capi_ctr, %struct.capi_ctr* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 4
  %27 = load %struct.capi_ctr*, %struct.capi_ctr** %6, align 8
  %28 = getelementptr inbounds %struct.capi_ctr, %struct.capi_ctr* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @seq_printf(%struct.seq_file* %14, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32 %17, i32 %20, i32 %23, i32 %26, i32 %29)
  store i32 0, i32* %3, align 4
  br label %31

31:                                               ; preds = %13, %12
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i32 @seq_printf(%struct.seq_file*, i8*, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
